k8s/04-ms1-getprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms1-getprofile
  namespace: codechallenge
spec:
  replicas: 1
  selector:
    matchLabels: { app: ms1-getprofile }
  template:
    metadata:
      labels: { app: ms1-getprofile }
    spec:
      containers:
      - name: ms1-getprofile
        image: treisys/ms1-getprofile:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ms1-getprofile
  namespace: codechallenge
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector: { app: ms1-getprofile }
